--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/icons/icon-128x128.png">
 
     <script>
         window.addEventListener("load",()=>{
