--- a/offline.html
+++ b/offline.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <title>Document</title>
     <style>
-        * {
-            background-color: orange;
+        .wrapper {
+            width: 100%;
+            display: flex;
+            height: 90vh;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .refresh-btn {
+            margin: auto;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-radius: 12px;
+            border: 2px solid #C1C1C1;
+        }
+
+        .bigText {
+            font-size: xx-large;
+            color: #4b4b4b;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+
+        .smallText {
+            color: #4b4b4b;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+        .textWrapper{
+            margin-top: 10rem;
         }
     </style>
 </head>
+
 <body>
-    fline
+    <div class="wrapper">
+        <div class="textWrapper">
+            <h1 class="bigText">You are offline</h1>
+            <div class="smalltText">Try connecting to the internet and refresh the page</div>
+        </div>
+        <button onClick="window.location.reload();" class="refresh-btn">Refresh Page</button>
+    </div>
 </body>
+
 </html>
